--- a/index.html
+++ b/index.html
@@ -158,7 +158,41 @@ background:rgba(255,255,255,0.06);
 font-size:13px; 
 } 
 .calendar-day.marked{background:#00ff9d;color:#000} 
-</style> 
+</style> /* iOS 18 liquid gloss */
+.bottom-dock::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  border-radius:38px;
+  pointer-events:none;
+  background: radial-gradient(120% 80% at 20% 0%,
+    rgba(255,255,255,0.18) 0%,
+    rgba(255,255,255,0.06) 22%,
+    rgba(255,255,255,0.00) 55%);
+  mix-blend-mode:screen;
+}
+
+/* active shimmer */
+.dock-item.active::after{
+  content:"";
+  position:absolute;
+  inset:6px;
+  border-radius:18px;
+  background: linear-gradient(120deg,
+    rgba(255,255,255,0.00) 0%,
+    rgba(255,255,255,0.16) 45%,
+    rgba(255,255,255,0.00) 85%);
+  transform: translateX(-60%);
+  animation: shimmer 1.8s ease-in-out infinite;
+  pointer-events:none;
+  opacity:0.55;
+}
+
+@keyframes shimmer{
+  0%{transform:translateX(-60%)}
+  60%{transform:translateX(60%)}
+  100%{transform:translateX(60%)}
+}
 </head> 
  
 <body> 
@@ -290,7 +324,14 @@ function switchTab(id, el){
   requestAnimationFrame(()=>{ 
     requestAnimationFrame(()=>{ 
       next.style.opacity = "1"; 
-      next.style.transform = "translateY(0)"; 
+      next.style.transform = "translateY(0)"; next.animate(
+  [
+    { transform: "translateY(14px) scale(0.985)", opacity: 0 },
+    { transform: "translateY(0) scale(1.01)", opacity: 1, offset: 0.75 },
+    { transform: "translateY(0) scale(1)", opacity: 1 }
+  ],
+  { duration: 360, easing: "cubic-bezier(.2,.9,.2,1)" }
+);
       setTimeout(()=>{ 
         next.style.opacity = ""; 
         next.style.transform = ""; 
