--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ background:rgba(255,255,255,0.06);
 font-size:13px; 
 } 
 .calendar-day.marked{background:#00ff9d;color:#000} 
-</style> /* iOS 18 liquid gloss */
+/* iOS 18 liquid gloss */
 .bottom-dock::after{
   content:"";
   position:absolute;
@@ -192,7 +192,7 @@ font-size:13px;
   0%{transform:translateX(-60%)}
   60%{transform:translateX(60%)}
   100%{transform:translateX(60%)}
-}
+}</style> 
 </head> 
  
 <body> 
