--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ font-size:13px;
  
   <div class="dock-item" onclick="switchTab('decisions', this)"> 
     <div class="dock-icon">🧠</div> 
-    <div class="dock-label">Решения</div> 
+    <div class="dock-label">еще</div> 
   </div> 
 </div> 
  
